--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -360,6 +360,7 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 * `INFO` : Information showing the noteworthy actions by the App
 * `FINE` : Details that is not usually noteworthy but may be useful in debugging e.g. print the actual list instead of just its size
 
+// tag::ics[]
 [[Design-Ics]]
 === Ics Component
 
@@ -402,6 +403,7 @@ and keep all code relevant to converting objects to ICS Strings in the same clas
 
 This further makes it easier for future debugging,
 and makes adding new exportable objects a lot easier as there are common functions that can be used.
+// end::ics[]
 
 == Implementation
 
@@ -625,6 +627,39 @@ Use case resumes at step 3.
 +
 _{More to be added}_
 
+[discrete]
+=== Use case 6: Export Command
+*MSS*
+
+1.  User requests to export Horo data.
+2.  Horo creates a file in the same directory as Horo.
+3.  Horo replies that its data has been successfully exported.
++
+Use Case Ends.
+
+*Extensions*
+
+* 2a. The user specifies which directory to export the save data to.
++
+Use Case resumes at step 3.
+
+[discrete]
+=== Use case 7: Import Command
+*MSS*
+
+1.  User requests to import Horo data from a specific file.
+2.  The file is imported into Horo.
+3.  Horo replies that the data has successfully been imported into Horo.
++
+Use Case Ends.
+
+**Extensions**
+
+* 1a.  The file does not exist or is corrupted.
+** 1a1. Horo replies with an error message.
++
+Use Case Ends.
+
 [appendix]
 == Non Functional Requirements
 
@@ -633,7 +668,6 @@ _{More to be added}_
 .  Should function on both `32-bit environment` and `64-bit environment`
 .  Should work without any internet required.
 .  A user with above average typing speed for regular English text (i.e. not code, not system admin commands) should be able to accomplish most of the tasks faster using commands than using the mouse.
-.
 
 
 _{More to be added}_
@@ -703,5 +737,26 @@ These instructions only provide a starting point for testers to work on; testers
 .. Resize the window to an optimum size. Move the window to a different location. Close the window.
 .. Re-launch the app by double-clicking the jar file. +
   Expected: The most recent window size and location is retained.
+
+=== ICS Export and Import Component
+
+. Export
+
+.. Start Horo with no save data.
+.. Enter the `export` command. +
+Expected: A save file with the name `Horo_export_<timestamp>.ics` will be created in the
+same directory as Horo's jar file.
+.. Enter the command `export **--directory** <DIRECTORY>`,
+where <DIRECTORY> is the directory where the save file will be created. +
+Expected: The save file will be created in the specified directory.
+
+. Import from iCalendar file.
+.. Create some events and tasks in Horo.
+.. Take note of the current events and tasks by entering the `list` command,
+going into the list view.
+.. Enter the `export` command.
+.. Delete the save data from Horo and re-launch the app.
+.. Import the save data using the import command `import <FILEPATH>`. +
+Expected: The imported events and tasks should be the same as when they were exported.
 
 _{ more test cases ... }_
