Edit user guide

--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -611,6 +611,8 @@ The below commands will only affect state-changing, and not UI-related commands.
 * *add_task*
 * *delete_task*
 * *edit_task*
+* *import*
+* *export*
 
 
 ==== Undo
@@ -652,12 +654,17 @@ Command Format: +
 
 {empty} +
 
+// tag::ics[]
 === iCalendar (ICS) Integration
 
 Horo stores data in the ICS format. Files saved in this format have the extension `.ics`.
-This allows for data to be imported to and exported from other calendar applications that also use the `.ics` format.
+This allows for data to be imported from and exported to other calendar applications that also use the `.ics` format.
 
-==== Export current calendar
+This means you can export and import your calendar events and todo items straight from Google Calendar into Horo,
+and vice versa!
+It also means that you can export and import your save data between different machines running Horo.
+
+==== Export Current Data
 
 .Export Command
 image::ExportCommandScreenShot.png[]
@@ -668,6 +675,9 @@ image::ExportFileScreenShot.png[]
 The `export` command exports your current calendar as an ICS file to the specified directory.
 If no directory is specified, the file will be created in the same directory as Horo.
 
+If you want to export the ICS file to a certain directory like your desktop,
+all you have to do is specify it with the `*--directory*` parameter.
+
 Command Format: +
 `*export*` +
 `*export* *--directory* DIRECTORY`
@@ -677,13 +687,13 @@ Example: +
 
 {empty} +
 
-==== Import other calendar
-
-.Import Command
-image::ImportCommandScreenShot.png[]
+==== Import other ICS Data
 
 .Imported File
 image::ImportFileScreenShot.png[]
+
+.Import Command
+image::ImportCommandScreenShot.png[]
 
 The `import` command imports an ICS file from the specified filepath.
 
@@ -692,6 +702,7 @@ Command Format: +
 
 Example: +
 `*import* "C:\Users\USER_NAME\Desktop\OtherCalendars\Others.ics"`
+// end::ics[]
 
 {empty} +
 
